--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,38 +1,41 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
+body {
+  font-family: "Arial", "Helvetica Neue", Helvetica, sans-serif;
+  display: grid;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: 60vh;
+  margin: 0;
 }
 
-.App-link {
-  color: #61dafb;
+h1 {
+  text-align: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#searchContainer {
+  margin-bottom: 20px;
+}
+
+#searchInput {
+  padding: 5px;
+}
+
+#buttonContainer {
+  text-align: center;
+  margin-top: 20px;
+}
+
+button {
+  padding: 5px 10px;
+  margin: 0 5px;
+}
+
+#musicTable {
+  width: 80%; /* Adjust width as needed */
+}
+
+/* Center the table horizontally */
+#musicTable {
+  margin-left: auto;
+  margin-right: auto;
 }
